# facilIAuto

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  5.9.0  CLAUDE.md  COMECE-AQUI.md  CONCLUSAO-FINAL.md  CONTRIBUTING.md  CORRECAO-API-ROUTING-405.md  CORRECAO-BADGE-ORCAMENTO.md  CORRECAO-COMPLETA-VEICULOS-COMERCIAIS.md  CORRECAO-JUSTIFICATIVA-ECONOMIA-COMBUSTIVEL.md  CORRECAO-MARCAS-DINAMICAS.md  CORRECAO-PRECO-COMBUSTIVEL-GASOLINA.md  CORRECAO-VEICULOS-COMERCIAIS-RESUMO.md  CORRECOES-TCO-COMPLETAS.md  DEPLOY-CHECKLIST.md  DEPLOY-RAILWAY-CHECKLIST.md  DEPLOY-RAILWAY-GUIA-COMPLETO.md  FEATURE-MARCAS-MODELOS.md  FILTRO-ESTADO-OBRIGATORIO.md  FOR-RECRUITERS.md  FOR-RECRUITERS_EN.md  GIT-GUIDE.md  GIT-SETUP.md  IMPLEMENTACAO-XP-TDD-COMPLETA.md  INDICE-DOCUMENTOS-VALIDACAO.md  LANGGRAPH_E2E_TESTS_DOCUMENTATION.md  LICENSE  MELHORIA-MENSAGENS-ERRO-RESULTADOS.md  MELHORIA-ORCAMENTO-MOBILE.md  ORGANIZACAO-COMPLETA.md  PLANO-ACAO-FINALIZACAO.md  PLANO-CORRECAO-TESTES.md  PROJECT-SUMMARY.md  PROXIMOS-PASSOS-IMEDIATOS.md  QUICK-START-VALIDACAO.md  RAIZ-ORGANIZADA-SUCESSO.md  README-IMPLEMENTACAO-XP.md  (+79 more)
platform/backend/: $null  .coverage  .coveragerc  .dockerignore  .env.example  AUDITORIA-DADOS-ORIGEM.md  DEBUG-ANO-MAXIMO.md  Dockerfile  FASE1-FILTROS-AVANCADOS.md  FASE2-COMPLETA.md  FASE3-COMPLETA.md  FASE4-COMPLETA.md  README.md  RESUMO-AUDITORIA-DADOS.md  SISTEMA-RECOMENDACAO-CORRIGIDO.md  docker-compose.yml  migrate_data.py  migrate_robustcar_data.py  nginx.conf  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt  run-tests.bat  run-tests.sh  run_fase3_tests.py  setup.bat  setup.sh  test_ano_maximo.py  test_api_response.py  test_filtros_obrigatorios.py  test_payload_real.py  test_validacao.py
platform/backend/api/: main.py
platform/backend/data/: app_transport_vehicles.json  autocenter_estoque.json  car_names_cleaning_report.json  carplus_estoque.json  dealerships.json  dealerships_backup.json  fuel_prices.json  robustcar_estoque.json  robustcar_estoque.json.backup  robustcar_estoque_backup.json  rpmultimarcas_estoque.json  usage_profiles.json
platform/backend/docs/: FUEL-PRICE-SERVICE.md  TCO_INTEGRATION.md
platform/backend/models/: __init__.py  car.py  dealership.py  feedback.py  interaction.py  user_profile.py
platform/backend/monitoring/: prometheus.yml
platform/backend/scripts/: $null  README.md  README_SCRAPER_RP.md  add_rp_multimarcas_to_dealerships.py  analyze_metrics.py  audit_data_quality.py  calibrate_scores.py  clean_car_names.py  compare_engines.py  find_misclassified.py  fix_car_data.py  fix_classifications.py  fix_misclassified_vehicles.py  fix_missing_data.py  fix_vehicle_classification.py  reclassify_cars.py  (+12 more)
platform/chatbot/: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  COMECE-AQUI-TASK-9.txt  CONVERSATION-FLOW.md  DEPLOYMENT-GUIDE.md  Dockerfile  EXECUTE-AGORA.md  IMPLEMENTATION-SUMMARY.md  Makefile  QUICK-START-PRODUCTION.md  README-TASK-9.md  README.md  SETUP.md  TASK-1-COMPLETE.md  TASK-4-COMPLETE.md  TASK-6-COMPLETE.md  TASK-8-COMPLETE.md  TASK-8.1-COMPLETE.md  TASK-8.1-VERIFICATION.md  TASK-8.2-COMPLETE.md  TASK-8.2-SUMMARY.md  TASK-8.3-COMPLETE.md  TASK-9-COMPLETE.md  TASK-9-PRODUCTION-READY.md  TASK-9-SUMARIO-FINAL.md  WEBHOOK_SUMMARY.md  alembic.ini  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  start-worker.bat  start_worker.py  verify_backend_client.py  (+4 more)
(+716 files in other folders)
